<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@color/background_secondary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:background="@drawable/ios_edittext_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/phoneEditText"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:background="@drawable/ios_edittext_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/ios_edittext_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/ios_edittext_background"
        android:padding="16dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registr"
        android:backgroundTint="?attr/settings_button_color"
        android:textColor="?attr/textColor"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:textColor="@color/primary_blue"
        android:textSize="15sp"
        android:gravity="center"
        android:padding="12dp" />

</LinearLayout>