<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="24sp"
        android:textColor="?attr/textColor"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/btn_back"
        android:layout_alignBottom="@id/btn_back"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/version_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/settings_button_color"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_version"
                android:fontFamily="@font/open_sans"
                android:textColor="?attr/textColor"/>

            <TextView
                android:id="@+id/tv_outdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdated"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_update_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="?attr/settings_button_color"
            android:padding="16dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/primary_blue"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_what_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_new"
        android:background="?attr/settings_button_color"
        android:padding="16dp"
        android:layout_below="@id/version_container"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/primary_blue"/>

    <TextView
        android:id="@+id/tv_beta_testers_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beta_testers_title"
        android:background="?attr/settings_button_color"
        android:padding="16dp"
        android:layout_below="@id/tv_what_new"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:textColor="?attr/textColor"/>

    <TextView
        android:id="@+id/tv_beta_testers_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beta_testers_list"
        android:background="?attr/settings_button_color"
        android:padding="16dp"
        android:layout_below="@id/tv_beta_testers_title"
        android:layout_marginTop="1dp"/>


</RelativeLayout>
