<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="24sp"
        android:textColor="?attr/textColor"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tv_username"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_my_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_resume"
            android:textColor="?attr/textColor"
            android:backgroundTint="?attr/settings_button_color"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_change_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Сменить ник"
            android:textColor="?attr/textColor"
            android:backgroundTint="?attr/settings_button_color" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/logout_button_text"
        android:backgroundTint="?attr/settings_button_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>
